package app.interfaces;

public interface NhsApi {
    /**
     * Method that will send the report for NHS
     * @param string the report
     */
    void sendReport(String string);
}
